--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,10 @@
           </ul>
         </div>
       </div>
-      <div class="uk-width-8-10 cm-contents">
+      <div class="uk-width-8-10 cm-contents cm-tv">
         <h1>company</h1>
         <form class="uk-form">
-          <table class="cm-table uk-table uk-table-hover uk-table-striped uk-table-condensed">
+          <table class="cm-table uk-table uk-table-striped uk-table-condensed">
             <thead>
                 <tr>
                   <th>Name</th>
@@ -70,8 +70,8 @@
             <tbody>
               <tr>
                 <td>name</td>
-                <td class="uk-text-center"><label><input type="checkbox" name="uniq" value="true"/></label></td>
-                <td class="uk-text-center"><input type="checkbox" name="required" value="true"/></td>
+                <td class="uk-text-center"><input id="uniq-name" type="checkbox" name="uniq" value="true"/><label for="uniq-name"></label></td>
+                <td class="uk-text-center"><input id="required-name" type="checkbox" name="required" value="true"/><label for="required-name"></label></td>
                 <td>
                   <select class="" name="type">
                     <option>string</option>
@@ -99,8 +99,8 @@
               </tr>
               <tr>
                 <td>president</td>
-                <td class="uk-text-center"><input type="checkbox" name="uniq" value="true"/></td>
-                <td class="uk-text-center"><input type="checkbox" name="required" value="true"/></td>
+                <td class="uk-text-center"><input id="uniq-president" type="checkbox" name="uniq" value="true"/><label for="uniq-president"></label></td>
+                <td class="uk-text-center"><input id="required-president" type="checkbox" name="required" value="true"/><label for="required-president" ></label></td>
                 <td>
                   <select class="" name="type">
                     <option>string</option>
